--- a/public/sass/partials/_helpers.scss
+++ b/public/sass/partials/_helpers.scss
@@ -5,7 +5,7 @@
 
 .button {
   border: 0;
-  background: #00ff00;
+  background: #47ec47;
   color: $white;
   font-family: 'Panama';
   font-weight: 600;
