--- a/views/mixins/_reviewForm.pug
+++ b/views/mixins/_reviewForm.pug
@@ -1,5 +1,5 @@
-mixin reviewForm(store)
-  form.reviewer(action=`/reviews/${store._id}` method="POST")
+mixin reviewForm(masjid)
+  form.reviewer(action=`/reviews/${masjid._id}` method="POST")
     textarea(name="text" placeholder="Did you try this masjid? Have something to say? Leave a review...")
     .reviewer__meta
       .reviewer__stars
