--- a/public/sass/partials/_footer.scss
+++ b/public/sass/partials/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     display: flex;
     align-items: center;
-    background: white;
+    background: #47ec47;;
     margin-top: 2rem;
     margin-bottom: 2rem;
     box-shadow: $shad;
