--- a/public/sass/partials/_reviews.scss
+++ b/public/sass/partials/_reviews.scss
@@ -12,7 +12,7 @@
     left: 0;
     content: '';
     display: block;
-    background: $verticalGrad;
+    background: #47ec47;;
     position: absolute;
     height: 100%;
     background-attachment: fixed;
