--- a/views/layout.pug
+++ b/views/layout.pug
@@ -63,4 +63,12 @@ html
     block footer  
         .footer
           p
-            center (c) Masjid.ng. Powered by ISLAMFOCUS. All Rights Reserverd 2018.
+            center MASJID.NG &copy; 2018. Powered by ISLAMFOCUS.  
+          p
+            center
+              pre
+                 strong support@masjid.ng or 08038620935 , 08086610589
+                 //- a(href='contact') Contact      
+                  a(href='privacy') Privacy Policy    
+                  a(href='faqs') FAQS    
+          
