--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title= `${title} | ${h.siteName}`
     link(rel='stylesheet', href='/dist/style.css')
-    link(rel="shortcut icon" type="image/png" href="/images/icons/doughnut.png")
+    link(rel="shortcut icon" type="image/png" href="/images/icons/masjid-favicon.png")
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block header
@@ -67,7 +67,7 @@ html
           p
             center
               pre
-                 strong support@masjid.ng or 08038620935 , 08086610589
+                 strong support@masjid.ng | 08038620935 
                  //- a(href='contact') Contact      
                   a(href='privacy') Privacy Policy    
                   a(href='faqs') FAQS    
