--- a/views/mixins/_masjidCard.pug
+++ b/views/mixins/_masjidCard.pug
@@ -28,4 +28,5 @@ mixin masjidCard(masjid = {})
       p
         strong=masjid.name
       p= masjid.location.address
+      p= masjid.imam_phone_no
   
