--- a/views/map.pug
+++ b/views/map.pug
@@ -5,6 +5,6 @@ block content
     h2= 'Masjid Locator'
     .map
       .autocomplete
-        input.autocomplete__input(type="text" placeholder="Search for Nearby Masjid" name="geolocate")
+        input.autocomplete__input(type="text" placeholder="Type a Location to Connect with a Nearby Mosque and Imam" name="geolocate")
       #map
         p Loading Map...
