--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -131,7 +131,7 @@
 }
 .marquee {
   background: #47ec47;
-    color: $white;
+    color: $black;
     border-right: 0px solid rgba(255,255,255,0.1);
     text-transform: uppercase;
     display: block;
