--- a/public/sass/partials/_tag.scss
+++ b/public/sass/partials/_tag.scss
@@ -25,7 +25,7 @@
         padding: 1rem 1rem 1rem 4rem;
       }
       &:checked + label {
-        background: $green;
+        background: #47ec47;
       }
     }
   }
