--- a/public/sass/partials/_typography.scss
+++ b/public/sass/partials/_typography.scss
@@ -38,7 +38,7 @@ p {
 }
 
 .title {
-  word-wrap: break-word;
+  //word-wrap: break-word;
   position: relative;
   z-index: 2;
   margin:0;
@@ -72,7 +72,7 @@ p {
 
 .title--single {
   max-width: 600px;
-  margin-top: -9rem;
+  //margin-top: -9rem;
   font-size: 10rem;
   text-align: center;
 }
