--- a/views/layout.pug
+++ b/views/layout.pug
@@ -49,7 +49,10 @@ html
  
       .marquee
           marquee(behavior="scroll", direction="left")       
-            p  News Update!  |  News Update!  |  News Update!  |  News Update!  |
+            p 
+              strong And the places of worship are for Allah (alone): So invoke not any one along with Allah. (Surah Al-Jinn, 18).  MASJID.NG is a unified digital platform where Muslims can search, geolocate, review and connect with Mosques and Imams from around the world.
+                
+
                    
     .content
       block content
